syntax = "proto3";

import "bbuhot/service/error_code.proto";

option java_package = "com.bbuhot.server.service";
option java_multiple_files = true;

message AuthRequest {
  int32 uid = 1;
  string auth = 2;
  string saltKey = 3;
}

message AuthReply {
  ErrorCode error_code = 1;
  UserReply user = 2;
}

message UserReply {
  int32 uid = 1;
  string name = 2;
}